# AviSynthPlus-PropToClip

./: CMakeLists.txt  README.md
msvc/: PropToClip.sln  PropToClip.vcxproj  PropToClip.vcxproj.filters
src/: PropToClip.cpp  PropToClip.rc
